<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nk_ol_cl_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/nk_ol_tv_profile_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nk_ol_tv_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nk_ol_tv_profile_title" />

    <TextView
        android:id="@+id/nk_ol_tv_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        tools:text="Nikol"
        app:layout_constraintBaseline_toBaselineOf="@id/nk_ol_tv_name_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/nk_ol_tv_surname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/label_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nk_ol_tv_name_label" />

    <TextView
        android:id="@+id/nk_ol_tv_surname_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        tools:text="Orbeladze"
        app:layout_constraintBaseline_toBaselineOf="@id/nk_ol_tv_surname_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/nk_ol_tv_birth_day_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/label_birth_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nk_ol_tv_surname_label" />

    <TextView
        android:id="@+id/nk_ol_tv_birth_day_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        tools:text="24"
        app:layout_constraintBaseline_toBaselineOf="@id/nk_ol_tv_birth_day_label"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
